--- a/dotNet5782_8995_8035/PL/BaseStationWindow.xaml
+++ b/dotNet5782_8995_8035/PL/BaseStationWindow.xaml
@@ -69,9 +69,9 @@
                     <TextBox  Text="{Binding Location.Latitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="180" PreviewTextInput="FloatNumberValidationTextBox"/>
                 </StackPanel>
             </StackPanel>
-
+            <StackPanel Height="10"></StackPanel>
             <StackPanel>
-                <ListView x:Name="listViewOfBaseStatin_ChargingDrones" ItemsSource="{Binding}" >
+                <ListView x:Name="listViewOfBaseStatin_ChargingDrones" ItemsSource="{Binding}" Height="200">
                     <ListView.Background>
                         <ImageBrush Opacity="10"/>
                     </ListView.Background>
