--- a/dotNet5782_8995_8035/PL/ListsViewWindow.xaml
+++ b/dotNet5782_8995_8035/PL/ListsViewWindow.xaml
@@ -12,7 +12,9 @@
         ResizeMode="NoResize" >
 
     <Window.Resources>
-
+        <local:ManagerAccssesAtholerasationToVisability x:Key="managerAtholerazetion"/>
+        <local:EmployeeAccssesAtholerasationToVisability x:Key="employeeAtholerazetion"/>
+        <local:CostumerAccssesAtholerasationToVisability x:Key="customerAtholerazetion"/>
     </Window.Resources>
 
 
