--- a/dotNet5782_8995_8035/PL/MainWindow.xaml
+++ b/dotNet5782_8995_8035/PL/MainWindow.xaml
@@ -17,7 +17,7 @@
     >
 
     <Window.Resources>
-        <local:AccssesAtholerasationToVisability x:Key="accssesAtholerasationToVisability"/>
+        <!--<local:AccssesAtholerasationToVisability x:Key="aaaaa"/>-->
     </Window.Resources>
     
     <Window.Background>
